gitops/apps/fmd2/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fmd2
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: fmd2
  template:
    metadata:
      labels:
        app: fmd2
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: fmd2
          image: zot.bealv.io/public/fmd2-nix:v2.0.34.5-v0.0.13
          ports:
            - containerPort: 6080
          volumeMounts:
            - name: data
              mountPath: /app/FMD2/data
            - name: userdata
              mountPath: /app/FMD2/userdata
            - name: wine
              mountPath: /home/fmd2/.wine
            - name: downloads
              mountPath: /app/FMD2/downloads
        - name: flaresolverr
          image: ghcr.io/flaresolverr/flaresolverr:v3.5.2
          ports:
            - name: flaresolverr
              containerPort: 8191
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: userdata
          persistentVolumeClaim:
            claimName: userdata
        - name: wine
          persistentVolumeClaim:
            claimName: wine
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
