gitops/apps/fmd2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fmd2
spec:
  selector:
    app: fmd2
  ports:
    - protocol: TCP
      port: 6080
      targetPort: 6080
  type: ClusterIP
